fix: sort project and includedBy references in reports
These can be very large for bigger projects; and sorting them makes it easier to scan through. Added new methods rather than changing semantics of the existing accessors on Dependency.

Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>